--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.2.1",
+    "emoji-picker-element": "^1.25.0",
     "pdfjs-dist": "^4.8.69",
     "pinia": "^2.1.7",
     "pusher": "^5.2.0",
